[tool.poetry]
name = "fast_api_sandbox"
version = "0.1.0"
description = ""
authors = ["Santiago Salgado <jssalgadog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
alembic = "^1.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
